# Python-Pytest-Playwright-Poetry

./: .gitignore  README.md  pyproject.toml  pytest.ini  test_report.html
actions/: about_actions.py  base_actions.py
core/consts/: date_format_const.py
core/enums/: language_enum.py  pages_enum.py
core/helpers/: test_data_helper.py
elements/: about_elements.py  base_elements.py
tests/: about_test.py  base_test.py  conftest.py  sign_in_test.py  sign_up_test.py
