[tool.poetry]
name = "python-pytest-playwright-poetry"
version = "0.1.0"
description = "The Test Automation Framework example based on the Python, Pytest, Playwright, and Poetry technologies"
authors = ["Zhuravl <zhuravskyi.illia@gmail.com>"]
readme = "README.md"
packages = [{include = "python-pytest-playwright-poetry"}]
repository = "https://github.com/zhuravl/Python-Pytest-Playwright-Poetry"

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.44.0"
pytest = "^8.2.2"
pytest-playwright = "^0.5.0"
pytest-html = "^4.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
